# iangel-alpha

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  openapi.json  pyproject.toml  railway.toml  start_server.sh
.github/: copilot-instructions.md
Officials_docs/: ARCHITECTURE_REFERENCE.md  PHASE_S0_COMPLETION_REPORT.md  README_DOCUMENTATION_STATUS.md  S1_INTEGRATION_GUIDE_IOS.md
Officials_docs/archive/v0.1.0_alpha/scripts/iAngel_Claude_Briefing_Library/: QUICK_START.md  S0-01_BRIEF_repo_structure.md  S0-02_BRIEF_endpoint_health.md  S0-04_BRIEF_mock_loader.md  S0-05_BRIEF_xcode_project.md  S1-04_BRIEF_state_machine.md  S2-02_to_S2-05_BRIEFS.md  S3-01_to_S3-04_BRIEFS.md
Officials_docs/files/: Android.md  ÉVALUATION DES FACTEURS.md  IOS.md  iAngel â€” SpÃ©cification des Contrats API.md  iAngel.md  iAngel_Roadmap_Walking_Skeleton_v1.md  iAngel_Strategie_BBV_Anti_Reward_Hacking_v1.md  ruleno1.md
Officials_docs/scripts/iAngel_Claude_Briefing_Library/: 00_INDEX_BRIEFING_SCRIPTS.md  S0-03_BRIEF_endpoint_capture.md  S0-06_BRIEF_api_client_ios.md  S0-07_BRIEF_ui_skeleton.md  S1-01_BRIEF_reasoning_engine.md  S1-02_BRIEF_llm_abstraction.md  S1-03_BRIEF_mock_library.md  S1-05_BRIEF_system_prompts.md  S2-01_BRIEF_onboarding_ios.md
app/: __init__.py  config.py  main.py
app/api/: __init__.py  router.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: __init__.py  capture.py  health.py
app/core/: __init__.py  database.py  errors.py  middleware.py  probes.py  reasoning.py  session.py  state.py
app/core/llm/: __init__.py  base.py  claude.py  prompts.py  schemas.py  utils.py
app/infrastructure/: probes.py
app/models/: __init__.py  database.py  schemas.py
app/sandbox/: __init__.py  mock_loader.py
app/services/: __init__.py  capture_service.py  health_service.py
ios/Models/: CaptureModels.swift  HealthModels.swift
ios/Services/: iAngelAPIClient.swift
ios/ViewModels/: CaptureViewModel.swift
ios/iAngel/iAngel/: ContentView.swift  iAngelApp.swift
ios/iAngel/iAngel.xcodeproj/: project.pbxproj
ios/iAngel/iAngel.xcodeproj/project.xcworkspace/xcuserdata/felixlefebvre.xcuserdatad/: UserInterfaceState.xcuserstate
ios/iAngel/iAngel.xcodeproj/xcuserdata/felixlefebvre.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/iAngel/iAngel/Models/: CaptureModels.swift  HealthModels.swift
ios/iAngel/iAngel/Services/: iAngelAPIClient.swift
ios/iAngel/iAngel/ViewModels/: CaptureViewModel.swift
ios/iAngel/iAngel/Views/: CaptureView.swift
ios/iAngel/iAngelTests/: iAngelTests.swift
ios/iAngel/iAngelUITests/: iAngelUITests.swift  iAngelUITestsLaunchTests.swift
mocks/: M01.json  M02.json  M03.json  M04.json  M05.json  M06.json  M07.json
scripts/: check_access.py  complete_test.py  debug_env.py  simulate_ginette.py  simulate_ios_client.py  test_brain.py
tests/: __init__.py  conftest.py  factories.py  test_capture.py  test_capture_service_logic.py  test_conversation_flow.py  test_health.py  test_health_service.py  test_lifespan.py  test_middleware.py  test_mock_loader.py  test_reasoning_engine.py  test_reasoning_s1.py  test_reasoning_s3.py  test_state_history.py
